# flair

./: COMPLETION_CHECKLIST.md  ENDPOINT_ANALYSIS.md  FILES_OVERVIEW.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  README_ZKP_IMPLEMENTATION.md  Repository Manager.postman_collection.json  TODO.txt  ZKP_COMMANDS.md  ZKP_IMPLEMENTATION_SUMMARY.md  ZKP_QUICKSTART.md  ZKP_REQUIREMENTS.md
cli/: .gitignore  README.md  deno.json
cli/lib/: data.py  nn.py  schema.ts  types.ts  utils.ts
cli/src/: env.ts  function.ts  main.ts  store.ts
docs/: overview.md
flair_cli/: README.md  config.example.yaml  main.py  pyproject.toml
flair_cli/api/: artifacts.py  auth.py  basemodel.py  branch.py  client.py  commit.py  repo.py  utils.py
flair_cli/cli/: add.py  auth.py  basemodel.py  branch.py  clone.py  commit.backup.txt  commit.py  config.py  diff.py  init.py  log.py  metrics.py  new.py  params.py  push.py  reconstruct.py  repo.py  reset.py  revert.py  show.py  status.py  storage.py  zkp.py  zkp_utils.py
flair_cli/cli/utils/: __init__.py  architecture.py  local_commits.py  param_io.py  reconstruction.py  repo_state.py
flair_cli/core/: config.py  crypto.py  session.py  storage.py
flair_cli/docs/: commit_history_storage_policy.md
flair_cli/models/: schemas.py
flair_cli/tests/: test_architecture.py  test_crypto.py  test_diff.py
frontend/: .prettierrc  package-lock.json  package.json  pnpm-lock.yaml
legacy/cli/: .gitignore  README.md  (+1 more)
merger/: .gitignore  README.md  app.py  app_debug.py  async_client.py  client.py  client_test.py  merger_service.py  package.json  pyproject.toml  run_commands.md  server.py  server2.py  setup.py  simulated_client.py  sync_client.py  sync_server.py  tmp_model_DUwyw8WeSjJEYakMs1TqzvXNLywawkZmZ4Vay5MLG7Tr.h5
merger/flower_async/: async_server.py
merger/lib/: local_folder.py  shared_folder_http.py
merger/localfolder_app/: app.py
merger/merger/: __init__.py  client_app.py  server_app.py  task.py
merger/merger/flower_async/: async_server.py
repository_manager/: Readme.md
serverless_merger/: .gitignore  app.py
(+247 files in other folders)
