[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merger"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "rs3655"

[tool.flwr.app.components]
serverapp = "merger.server_app:app"
clientapp = "merger.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1.0
local-epochs = 1

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9091"
insecure = true